--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav class="w-100pc flex flex-column md-flex-row md-px-10 py-5 bg-black">
         <div class="flex justify-between">
             <a href="#" class="flex items-center p-2 mr-4 no-underline">
-                <h2 class="white" style="margin-left: 20px;">Haswit.org</h2>
+                <h2 class="white" style="margin-left: 20px;">Haswit.in</h2>
             </a>
           
         </div>
